# yandex-webmaster-indexnow

./: LICENSE.md  pyproject.toml
src/yandexupdater/: 1  __init__.py  main.py
