[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yandexupdater"
version = "0.2"
authors = ["Etienne Robillard"]
description = "Python tool to send sitemap urls using IndexNow API."
readme = "README.md"
requires-python = ">=3.8, <4"
keywords = ["indexnow", "yandex", "sitemap"]
license = "GPL version 3 or later"

[project.scripts]
yandex-update-indexnow = "yandexupdater:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]



